<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPad"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="6.8"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1.8"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnOpAND"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpAND" />

            <Button
                android:id="@+id/btnHexaA"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strHexaA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnOpOR"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpOR" />

            <Button
                android:id="@+id/btnHexaB"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strHexaB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnOpXOR"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpXOR" />

            <Button
                android:id="@+id/btnHexaC"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strHexaC" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnHexa"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strF16" />

            <Button
                android:id="@+id/btnHexaD"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strHexaD" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnOctal"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strF8" />

            <Button
                android:id="@+id/btnHexaE"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strHexaE" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnBinary"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strF2" />

            <Button
                android:id="@+id/btnHexaF"
                style="@style/style_btn_genoa"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strHexaF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="5"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnAC"
                style="@style/style_btn_orange"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strAC" />

            <Button
                android:id="@+id/btnDgt7"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt7" />

            <Button
                android:id="@+id/btnDgt4"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt4" />

            <Button
                android:id="@+id/btnDgt1"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt1" />

            <Button
                android:id="@+id/btnDgt0"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPLeft"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strPLeft" />

            <Button
                android:id="@+id/btnDgt8"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt8" />

            <Button
                android:id="@+id/btnDgt5"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt5" />

            <Button
                android:id="@+id/btnDgt2"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt2" />

            <Button
                android:id="@+id/btnDot"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDot" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnPRight"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strPRight" />

            <Button
                android:id="@+id/btnDgt9"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt9" />

            <Button
                android:id="@+id/btnDgt6"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt6" />

            <Button
                android:id="@+id/btnDgt3"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDgt3" />

            <Button
                android:id="@+id/btnDel"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strDel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnOpDiv"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpDiv" />

            <Button
                android:id="@+id/btnOpMul"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpMul" />

            <Button
                android:id="@+id/btnOpMinus"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpMinus" />

            <Button
                android:id="@+id/btnOpPlus"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strOpPlus" />

            <Button
                android:id="@+id/btnEnter"
                style="@style/style_btn_sandrift"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/strEnter" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>