<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnOpAND"
            style="@style/style_launcher_genoa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/strOpAND"
            android:textSize="@dimen/btnOpBitwise"
            android:visibility="invisible"
            tools:ignore="NestedWeights" />

        <Button
            style="@style/style_launcher_genoa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="0x"
            android:textSize="70sp"
            tools:ignore="HardcodedText" />

        <Button
            style="@style/style_launcher_orange"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="AC"
            android:textSize="70sp"
            tools:ignore="HardcodedText" />

        <Button
            style="@style/style_launcher_genoa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/strOpAND"
            android:textSize="@dimen/btnOpBitwise"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            style="@style/style_launcher_genoa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/strOpOR"
            android:textSize="@dimen/btnOpBitwise"
            android:visibility="invisible"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    style="@style/style_launcher_genoa"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="&amp;"
                    android:textSize="40sp"
                    tools:ignore="HardcodedText,NestedWeights" />

                <Button
                    style="@style/style_launcher_genoa"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="A"
                    android:textSize="40sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    style="@style/style_launcher_genoa"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="|"
                    android:textSize="40sp"
                    tools:ignore="NestedWeights,HardcodedText" />

                <Button
                    style="@style/style_launcher_genoa"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="F"
                    android:textSize="40sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    style="@style/style_launcher_sandrift"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="+"
                    android:textSize="40sp"
                    tools:ignore="NestedWeights,HardcodedText" />

                <Button
                    style="@style/style_launcher_sandrift"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="\u00f7"
                    android:textSize="40sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    style="@style/style_launcher_sandrift"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="x"
                    android:textSize="40sp"
                    tools:ignore="NestedWeights,HardcodedText" />

                <Button
                    style="@style/style_launcher_sandrift"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="="
                    android:textSize="40sp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/style_launcher_genoa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/strHexaB"
            android:textSize="@dimen/btnHexaNum"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>